# HousePrice

./: .gitignore  .pre-commit-config.yaml  CITATION  README.md  environment.yml  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
paper/: houseprice.tex  houseprice_pres.nav  houseprice_pres.snm  houseprice_pres.tex  houseprice_pres.toc  task_paper.py
src/houseprice/: __init__.py  config.py  utilities.py
src/houseprice/analysis/: data_exploration.py  data_viz.py  model_selection.py  task_analysis.py  task_model.py  test_models.py
src/houseprice/data/: house_price.csv  house_price.xlsx  house_price_clean.csv  house_price_clean.xlsx  location_map.csv
src/houseprice/data_collection/: __init__.py  cleaned_data.csv  task_data_collection.py  ulaanbaatar.py  unegui_webscraping.py  util_collect.py  webscraping_unegui.py
src/houseprice/data_management/: __init__.py  clean_data.py  small_clean_func.py  task_clean_location.py  task_data_management.py
src/houseprice/final/: __init__.py  plot.py  task_final.py
src/houseprice/model/: task_model.py  util_model.py
src/unegui/: ulaanbaatar
tests/analysis/: test_predict.py
tests/collection/: __init__.py  test_webscraping.py
tests/data_management/: test_clean_data.py  test_data_clean_other.py
tests/model/: __init__.py  test_model.py
