[metadata]
name = houseprice
description = HousePrice
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Sugarkhuu, sharof20/houseprice
author = Sugarkhuu Radnaa, Juraev Sharofiddin
author_email = s6suradn@uni-bonn.de
license = Not open source
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: Not open source License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Changelog = https://github.com/Sugarkhuu, sharof20/houseprice
    Documentation = https://github.com/Sugarkhuu, sharof20/houseprice
    Github = https://github.com/Sugarkhuu, sharof20/houseprice
    Tracker = https://github.com/Sugarkhuu, sharof20/houseprice/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.11
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/houseprice/_version.py
